--- a/Armada.WebApp/packages.config
+++ b/Armada.WebApp/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net472" />
+  <package id="FluentValidation.Mvc5" version="8.6.1" targetFramework="net472" />
+  <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
@@ -32,5 +35,6 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
