--- a/Armada.ConsoleApp/App.config
+++ b/Armada.ConsoleApp/App.config
@@ -13,6 +13,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="Armada" connectionString= "Data Source=LAPTOP-5Q2SN5J3\SQLEXPRESS;Initial Catalog=ArmadaDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+		<add name="Armada" connectionString= "Data Source=.\;Initial Catalog=ArmadaDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
