--- a/Armada.WebApp/Web.config
+++ b/Armada.WebApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-		<add name="Armada" connectionString="Data Source=LAPTOP-5Q2SN5J3\SQLEXPRESS;Initial Catalog=ArmadaDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+		<add name="Armada" connectionString=".\;Initial Catalog=ArmadaDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
