--- a/ArmadaV3.RepositoryService/ArmadaV3.RepositoryService.csproj
+++ b/ArmadaV3.RepositoryService/ArmadaV3.RepositoryService.csproj
@@ -59,9 +59,13 @@
   <ItemGroup>
     <Compile Include="Repositories\AdmiralRepos.cs" />
     <Compile Include="Repositories\CrewRepos.cs" />
+    <Compile Include="Repositories\EmperorRepos.cs" />
+    <Compile Include="Repositories\EmpireRepos.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\MissionRepos.cs" />
+    <Compile Include="Repositories\PlanetRepos.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
