--- a/ArmadaV3.Entities/packages.config
+++ b/ArmadaV3.Entities/packages.config
@@ -6,9 +6,13 @@
   <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
 </packages>
