Added the roles and create mission web api controller

--- a/Armada.WebApp/Armada.WebApp.csproj
+++ b/Armada.WebApp/Armada.WebApp.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TestAdmiralsController.cs" />
     <Compile Include="Controllers\WebApi\CrewController.cs" />
+    <Compile Include="Controllers\WebApi\MissionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
