Added all webApi Controllers and js in Index
Have not been tested with db

--- a/Armada.WebApp/Armada.WebApp.csproj
+++ b/Armada.WebApp/Armada.WebApp.csproj
@@ -201,8 +201,12 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TestAdmiralsController.cs" />
+    <Compile Include="Controllers\WebApi\AdmiralController.cs" />
     <Compile Include="Controllers\WebApi\CrewController.cs" />
+    <Compile Include="Controllers\WebApi\EmperorController.cs" />
+    <Compile Include="Controllers\WebApi\EmpireController.cs" />
     <Compile Include="Controllers\WebApi\MissionController.cs" />
+    <Compile Include="Controllers\WebApi\PlanetController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
