--- a/Armada.WebApp/Armada.WebApp.csproj
+++ b/Armada.WebApp/Armada.WebApp.csproj
@@ -233,11 +233,15 @@
     <Content Include="Content\bootstrap-solar.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\about.jpg" />
     <Content Include="Content\img\enlist.jpg" />
+    <Content Include="Content\img\enlistDark.jpg" />
+    <Content Include="Content\img\enlistHighlight.jpg" />
     <Content Include="Content\img\space1.jpg" />
     <Content Include="Content\img\space2.jpeg" />
     <Content Include="Content\img\space3.jpg" />
     <Content Include="Content\img\space4.jpeg" />
+    <Content Include="Content\media\destroyer.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
